// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/WorkpadFilters/FilterComponent default 1`] = `
<div
  className="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-m-m-plain"
>
  <dl
    className="euiDescriptionList workpadFilter emotion-euiDescriptionList-column-left"
    data-type="column"
  >
    <dt
      className="euiDescriptionList__title eui-textBreakWord emotion-euiDescriptionList__title-column-m-compressed"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <h4>
          Type
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord emotion-euiDescriptionList__description-column-normal-m"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        exactly
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord emotion-euiDescriptionList__title-column-m-compressed"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <h4>
          Column
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord emotion-euiDescriptionList__description-column-normal-m"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        project
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord emotion-euiDescriptionList__title-column-m-compressed"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <h4>
          Value
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord emotion-euiDescriptionList__description-column-normal-m"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        kibana
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord emotion-euiDescriptionList__title-column-m-compressed"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <h4>
          Filter group
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord emotion-euiDescriptionList__description-column-normal-m"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        Group 1
      </div>
    </dd>
  </dl>
</div>
`;

exports[`Storyshots components/WorkpadFilters/FilterComponent with component field 1`] = `
<div
  className="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-m-m-plain"
>
  <dl
    className="euiDescriptionList workpadFilter emotion-euiDescriptionList-column-left"
    data-type="column"
  >
    <dt
      className="euiDescriptionList__title eui-textBreakWord emotion-euiDescriptionList__title-column-m-compressed"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <h4>
          Type
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord emotion-euiDescriptionList__description-column-normal-m"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        exactly
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord emotion-euiDescriptionList__title-column-m-compressed"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <h4>
          Column
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord emotion-euiDescriptionList__description-column-normal-m"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        project
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord emotion-euiDescriptionList__title-column-m-compressed"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <h4>
          Value
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord emotion-euiDescriptionList__description-column-normal-m"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <div
          className="euiText emotion-euiText-m"
        >
          <span
            className="emotion-euiTextColor-success"
            style={Object {}}
          >
            <h3>
              kibana
            </h3>
          </span>
        </div>
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord emotion-euiDescriptionList__title-column-m-compressed"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <h4>
          Filter group
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord emotion-euiDescriptionList__description-column-normal-m"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        Group 1
      </div>
    </dd>
  </dl>
</div>
`;

exports[`Storyshots components/WorkpadFilters/FilterComponent with custom filter fields 1`] = `
<div
  className="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-m-m-plain"
>
  <dl
    className="euiDescriptionList workpadFilter emotion-euiDescriptionList-column-left"
    data-type="column"
  >
    <dt
      className="euiDescriptionList__title eui-textBreakWord emotion-euiDescriptionList__title-column-m-compressed"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <h4>
          Type
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord emotion-euiDescriptionList__description-column-normal-m"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        exactly
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord emotion-euiDescriptionList__title-column-m-compressed"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <h4>
          Column
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord emotion-euiDescriptionList__description-column-normal-m"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        project
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord emotion-euiDescriptionList__title-column-m-compressed"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <h4>
          Value
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord emotion-euiDescriptionList__description-column-normal-m"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        kibana
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord emotion-euiDescriptionList__title-column-m-compressed"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <h4>
          Filter group
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord emotion-euiDescriptionList__description-column-normal-m"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        Group 1
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord emotion-euiDescriptionList__title-column-m-compressed"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        <h4>
          Custom Field
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord emotion-euiDescriptionList__description-column-normal-m"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText emotion-euiText-s"
      >
        Some unknown field
      </div>
    </dd>
  </dl>
</div>
`;
